Added new Classes and fixed errors
Added new Classes to the project, and fixed errors that wouldn't let Spring Boot work properly.

--- a/mango/pom.xml
+++ b/mango/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mango</name>
 	<description>ManGo application</description>
+
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -31,6 +32,13 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
