--- a/mango/src/main/resources/application.properties
+++ b/mango/src/main/resources/application.properties
@@ -1,2 +1,18 @@
-
-spring.main.allow-circular-references=true
+server.port=8080
+spring.datasource.url=jdbc:h2:file:./src/main/resources/data/db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.error.include-message=always
+spring.jpa.hibernate.ddl-auto = create-drop
+#spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+jwt.secret=korisnickoime
+spring.jpa.defer-datasource-initialization: true
+spring.sql.init.mode=always
