--- a/mango/src/main/resources/application.properties
+++ b/mango/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
-jwt.secret=korisnickoime
 spring.jpa.defer-datasource-initialization: true
 spring.sql.init.mode=always
+spring.jpa.properties.hibernate.connection.charSet=UTF-8
