--- a/mango/src/main/resources/application.properties
+++ b/mango/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization: true
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.connection.charSet=UTF-8
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jackson.serialization.fail-on-empty-beans=false
