--- a/mango/src/main/resources/application.properties
+++ b/mango/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.sql.init.mode=always
 spring.jpa.properties.hibernate.connection.charSet=UTF-8
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jackson.serialization.fail-on-empty-beans=false
+spring.h2.console.settings.web-allow-others=true
