--- a/mango/src/main/resources/application.properties
+++ b/mango/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.error.include-message=always
 spring.jpa.hibernate.ddl-auto = create-drop
-#spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
@@ -19,3 +18,7 @@ spring.jpa.properties.hibernate.connection.charSet=UTF-8
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.h2.console.settings.web-allow-others=true
+
+spring.security.user.name=test
+spring.security.user.password=test
+jwt.secret = "tajna"
