--- a/mango/pom.xml
+++ b/mango/pom.xml
@@ -8,6 +8,7 @@
 		<version>2.7.3</version>
 		<relativePath/>
 	</parent>
+
 	<groupId>project</groupId>
 	<artifactId>mango</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -16,6 +17,7 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<intercept-url pattern="/user/login" filters="none" />
 	</properties>
 	<dependencies>
 		<dependency>
@@ -50,10 +52,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
