--- a/mango/src/main/resources/application.properties
+++ b/mango/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.jpa.properties.hibernate.connection.charSet=UTF-8
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.h2.console.settings.web-allow-others=true
+jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;MODE=MySQL;NON_KEYWORDS=USER
+server.servlet.context-path=/api
 
 spring.security.user.name=test
 spring.security.user.password=test
